@@ -18,6 +18,15 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Objects
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -149,6 +158,12 @@ name|other
 operator|.
 name|bytes
 operator|=
+name|bytes
+operator|==
+literal|null
+condition|?
+literal|null
+else|:
 name|BytesRef
 operator|.
 name|deepCopyOf
@@ -209,6 +224,76 @@ argument_list|,
 name|bytes
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|equals
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|o
+parameter_list|)
+block|{
+if|if
+condition|(
+name|this
+operator|==
+name|o
+condition|)
+return|return
+literal|true
+return|;
+if|if
+condition|(
+operator|!
+operator|(
+name|o
+operator|instanceof
+name|BytesTermAttributeImpl
+operator|)
+condition|)
+return|return
+literal|false
+return|;
+name|BytesTermAttributeImpl
+name|that
+init|=
+operator|(
+name|BytesTermAttributeImpl
+operator|)
+name|o
+decl_stmt|;
+return|return
+name|Objects
+operator|.
+name|equals
+argument_list|(
+name|bytes
+argument_list|,
+name|that
+operator|.
+name|bytes
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|hashCode
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+return|return
+name|Objects
+operator|.
+name|hash
+argument_list|(
+name|bytes
+argument_list|)
+return|;
 block|}
 block|}
 end_class
