@@ -20,6 +20,47 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|CachingTokenFilter
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|TokenStream
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|memory
+operator|.
+name|MemoryIndex
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
@@ -51,6 +92,21 @@ operator|.
 name|params
 operator|.
 name|FacetParams
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|ModifiableSolrParams
 import|;
 end_import
 begin_import
@@ -753,6 +809,91 @@ operator|.
 name|getCoreCacheKey
 argument_list|()
 return|;
+block|}
+annotation|@
+name|Test
+comment|// SOLR-8541
+DECL|method|testConstantScoreQueryWithFilterPartOnly
+specifier|public
+name|void
+name|testConstantScoreQueryWithFilterPartOnly
+parameter_list|()
+block|{
+specifier|final
+name|String
+index|[]
+name|doc1
+init|=
+block|{
+literal|"id"
+block|,
+literal|"1"
+block|,
+literal|"srptgeom"
+block|,
+literal|"56.9485,24.0980"
+block|}
+decl_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|doc1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ModifiableSolrParams
+name|params
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"{!geofilt sfield=\"srptgeom\" pt=\"56.9484,24.0981\" d=100}"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+literal|"hl"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+literal|"hl.fl"
+argument_list|,
+literal|"srptgeom"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+name|params
+argument_list|)
+argument_list|,
+literal|"*[count(//doc)=1]"
+argument_list|,
+literal|"count(//lst[@name='highlighting']/*)=1"
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
